app/imports/custom/owlgred/client/js/data_range_grammar_parser_OWLGrEd.js

  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = function(e) { return e; },
        peg$c1 = { type: "any", description: "any character" },
        peg$c2 = function(dr) { return dr; },
        peg$c3 = "or",
        peg$c4 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c5 = function(head, tail) {
              const items = listFromFirstTail(head, tail, 3);
              return node({ grammarProduction: "dataDisjunction" }, items);
            },
        peg$c6 = "and",
        peg$c7 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c8 = function(head, tail) {
              const items = listFromFirstTail(head, tail, 3);
              return node({ grammarProduction: "dataConjunction" }, items);
            },
        peg$c9 = function(neg, body) {
              return Object.assign(
                { negation: neg || "false" },
                body
              );
            },
        peg$c10 = "not",
        peg$c11 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c12 = function() { return "true"; },
        peg$c13 = function(r) { return { dataPrimaryType: "datatypeRestriction", restriction: r }; },
        peg$c14 = function(d) { return { dataPrimaryType: "datatype", datatype: d }; },
        peg$c15 = "{",
        peg$c16 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c17 = "}",
        peg$c18 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c19 = function(ll) { return { dataPrimaryType: "literalList", literalList: ll }; },
        peg$c20 = "(",
        peg$c21 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c22 = ")",
        peg$c23 = { type: "literal", value: ")", description: "\")\"" },
        peg$c24 = function(dr) { return { dataPrimaryType: "dataRange", dataRange: dr }; },
        peg$c25 = function(iri) { return { type: "IRI", value: iri }; },
        peg$c26 = "integer",
        peg$c27 = { type: "literal", value: "integer", description: "\"integer\"" },
        peg$c28 = function() { return { type: "predefined", value: "integer" }; },
        peg$c29 = "decimal",
        peg$c30 = { type: "literal", value: "decimal", description: "\"decimal\"" },
        peg$c31 = function() { return { type: "predefined", value: "decimal" }; },
        peg$c32 = "float",
        peg$c33 = { type: "literal", value: "float", description: "\"float\"" },
        peg$c34 = function() { return { type: "predefined", value: "float" }; },
        peg$c35 = "string",
        peg$c36 = { type: "literal", value: "string", description: "\"string\"" },
        peg$c37 = function() { return { type: "predefined", value: "string" }; },
        peg$c38 = "[",
        peg$c39 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c40 = ",",
        peg$c41 = { type: "literal", value: ",", description: "\",\"" },
        peg$c42 = "]",
        peg$c43 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c44 = function(dt, head, tail) {
              const restrictions = listFromFirstTail(head, tail, 3);
              return { datatype: dt, restrictions };
            },
        peg$c45 = function(f, v) { return { facet: f, value: v }; },
        peg$c46 = "<=",
        peg$c47 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c48 = "<",
        peg$c49 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c50 = ">=",
        peg$c51 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c52 = ">",
        peg$c53 = { type: "literal", value: ">", description: "\">\"" },
        peg$c54 = "length",
        peg$c55 = { type: "literal", value: "length", description: "\"length\"" },
        peg$c56 = "maxLength",
        peg$c57 = { type: "literal", value: "maxLength", description: "\"maxLength\"" },
        peg$c58 = "minLength",
        peg$c59 = { type: "literal", value: "minLength", description: "\"minLength\"" },
        peg$c60 = "pattern",
        peg$c61 = { type: "literal", value: "pattern", description: "\"pattern\"" },
        peg$c62 = "langPattern",
        peg$c63 = { type: "literal", value: "langPattern", description: "\"langPattern\"" },
        peg$c64 = function(first, rest) {
              return listFromFirstTail(first, rest, 3);
            },
        peg$c65 = "^^",
        peg$c66 = { type: "literal", value: "^^", description: "\"^^\"" },
        peg$c67 = function(v, dt) { return { type: "typed", value: v, datatype: dt }; },
        peg$c68 = function(v) { return { type: "stringNoLang", value: v }; },
        peg$c69 = "@",
        peg$c70 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c71 = function(v, lang) { return { type: "stringWithLang", value: v, language: lang }; },
        peg$c72 = function(v) { return { type: "integer", value: v }; },
        peg$c73 = ".",
        peg$c74 = { type: "literal", value: ".", description: "\".\"" },
        peg$c75 = function(v) { return { type: "decimal", value: v }; },
        peg$c76 = "f",
        peg$c77 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c78 = "F",
        peg$c79 = { type: "literal", value: "F", description: "\"F\"" },
        peg$c80 = function(v) { return { type: "float", value: v }; },
        peg$c81 = "e",
        peg$c82 = { type: "literal", value: "e", description: "\"e\"" },
        peg$c83 = "E",
        peg$c84 = { type: "literal", value: "E", description: "\"E\"" },
        peg$c85 = "+",
        peg$c86 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c87 = "-",
        peg$c88 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c89 = /^[0-9]/,
        peg$c90 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c91 = /^[A-Za-z\x80-\xD6\xD8-\xF6\xF8-\xFF]/,
        peg$c92 = { type: "class", value: "[A-Za-z\\x80-\\xD6\\xD8-\\xF6\\xF8-\\xFF]", description: "[A-Za-z\\x80-\\xD6\\xD8-\\xF6\\xF8-\\xFF]" },
        peg$c93 = /^[A-Za-z0-9_\-\x80-\xD6\xD8-\xF6\xF8-\xFF]/,
        peg$c94 = { type: "class", value: "[A-Za-z0-9_\\-\\x80-\\xD6\\xD8-\\xF6\\xF8-\\xFF]", description: "[A-Za-z0-9_\\-\\x80-\\xD6\\xD8-\\xF6\\xF8-\\xFF]" },
        peg$c95 = /^[\x01-!#-[\]-\xFF]/,
        peg$c96 = { type: "class", value: "[\\x01-\\x21\\x23-\\x5B\\x5D-\\xFF]", description: "[\\x01-\\x21\\x23-\\x5B\\x5D-\\xFF]" },
        peg$c97 = /^[A-Za-z\-]/,
        peg$c98 = { type: "class", value: "[A-Za-z\\-]", description: "[A-Za-z\\-]" },
        peg$c99 = /^[!-;=?-~\x80-\xFF]/,
        peg$c100 = { type: "class", value: "[\\x21-\\x3B\\x3D\\x3F-\\x7E\\x80-\\xFF]", description: "[\\x21-\\x3B\\x3D\\x3F-\\x7E\\x80-\\xFF]" },
        peg$c101 = "\"",
        peg$c102 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c103 = function(s) { return s; },
        peg$c104 = "\\\\",
        peg$c105 = { type: "literal", value: "\\\\", description: "\"\\\\\\\\\"" },
        peg$c106 = "\\\"",
        peg$c107 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c108 = function(v) { return { IRItype: "fullIRI", value: v }; },
        peg$c109 = function(v) { return { IRItype: "abbreviatedIRI", value: v }; },
        peg$c110 = function(v) { return { IRItype: "fullNamespaceIRI", value: v }; },
        peg$c111 = function(v) { return { IRItype: "simpleIRI", value: v }; },
        peg$c112 = function(name, prefix) { return { name: name, prefix: prefix }; },
        peg$c113 = "/",
        peg$c114 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c115 = ":",
        peg$c116 = { type: "literal", value: ":", description: "\":\"" },
        peg$c117 = "_",
        peg$c118 = { type: "literal", value: "_", description: "\"_\"" },
        peg$c119 = "_:",
        peg$c120 = { type: "literal", value: "_:", description: "\"_:\"" },
        peg$c121 = /^[ \t\r\n]/,
        peg$c122 = { type: "class", value: "[ \\t\\r\\n]", description: "[ \\t\\r\\n]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$resultsCache = {},

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseStart() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 42 + 0,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseExpression();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseExpression() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 42 + 1,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseDataRange();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        if (input.length > peg$currPos) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = void 0;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseDataRange() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      var key    = peg$currPos * 42 + 2,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseDataConjunction();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseWhitespacePlus();
        if (s4 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c3) {
            s5 = peg$c3;
            peg$currPos += 2;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parseWhitespacePlus();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseDataConjunction();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseWhitespacePlus();
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c3) {
              s5 = peg$c3;
              peg$currPos += 2;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c4); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseWhitespacePlus();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseDataConjunction();
                if (s7 !== peg$FAILED) {
                  s4 = [s4, s5, s6, s7];
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseDataConjunction() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      var key    = peg$currPos * 42 + 3,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseDataPrimary();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseWhitespacePlus();
        if (s4 !== peg$FAILED) {
          if (input.substr(peg$currPos, 3) === peg$c6) {
            s5 = peg$c6;
            peg$currPos += 3;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c7); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parseWhitespacePlus();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseDataPrimary();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseWhitespacePlus();
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 3) === peg$c6) {
              s5 = peg$c6;
              peg$currPos += 3;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c7); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseWhitespacePlus();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseDataPrimary();
                if (s7 !== peg$FAILED) {
                  s4 = [s4, s5, s6, s7];
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c8(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseDataPrimary() {
      var s0, s1, s2;

      var key    = peg$currPos * 42 + 4,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseNegation();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseDataPrimaryBody();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c9(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseNegation() {
      var s0, s1, s2;

      var key    = peg$currPos * 42 + 5,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c10) {
        s1 = peg$c10;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseWhitespacePlus();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c12();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseDataPrimaryBody() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 42 + 6,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseDatatypeRestriction();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c13(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseDatatype();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c14(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 123) {
            s1 = peg$c15;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parseWhitespaceStar();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseLiteralList();
              if (s3 !== peg$FAILED) {
                s4 = peg$parseWhitespaceStar();
                if (s4 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 125) {
                    s5 = peg$c17;
                    peg$currPos++;
                  } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c18); }
                  }
                  if (s5 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c19(s3);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 40) {
              s1 = peg$c20;
              peg$currPos++;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c21); }
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parseWhitespaceStar();
              if (s2 !== peg$FAILED) {
                s3 = peg$parseDataRange();
                if (s3 !== peg$FAILED) {
                  s4 = peg$parseWhitespaceStar();
                  if (s4 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 41) {
                      s5 = peg$c22;
                      peg$currPos++;
                    } else {
                      s5 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c23); }
                    }
                    if (s5 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c24(s3);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          }
        }
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseDatatype() {
      var s0, s1;

      var key    = peg$currPos * 42 + 7,
          cached = peg$resultsCache[key];
